# hello-wakeword

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
agent/: agent.py  pyproject.toml
client/: client.py  pyproject.toml  room_session.py
